Colaboratory を使用して作成しました

--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "matplotlib01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO19EO4MIu2ntmnxBKJQ3O+",
+      "authorship_tag": "ABX9TyNJGUEgPX3CLEYplYGLztYo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,8 @@
         "\n",
         "1. matplotlibで数直線とか、ただの三角とか描きたい。\n",
         "1. 本家サイト https://matplotlib.org/\n",
-        "1. いろいろできあがりとか使い方のサイトはあるのだが基本からわからりたい。まああがいてみるか。"
+        "1. いろいろできあがりとか使い方のサイトはあるのだが基本からわからりたい。まああがいてみるか。\n",
+        "1. どうやらmatplotlibは数直線とかただの三角形を描くには向いていないみたいだが、SVGで描くのもめんどうかもしれない。考えよう。"
       ]
     },
     {
@@ -181,7 +182,7 @@
         "plt.title(\"Sample Visualization\")\n",
         "plt.show()"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -223,7 +224,7 @@
       "source": [
         "np.random.randn?"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,7 +241,7 @@
       "source": [
         "np.random.randn(2)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -290,7 +291,7 @@
         "plt.title(\"Sample Visualization\")\n",
         "plt.show()"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -334,7 +335,7 @@
         "print (max(np.random.randn(100)))\n",
         "print (min (np.random.randn(100)))"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,7 +396,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -460,7 +461,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -487,7 +488,7 @@
       "source": [
         "plt.arrow?"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -506,7 +507,7 @@
         "\n",
         "plt.annotate(s='', xy=(1,0.5), xytext=(0,0.5), arrowprops=dict(arrowstyle='<->'))"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +546,7 @@
       "source": [
         "plt.annotate?"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -578,7 +579,7 @@
         "  <line x1=\"0\" y1=\"0\" x2=\"200\" y2=\"200\" style=\"stroke:rgb(255,0,0);stroke-width:2\" />\n",
         "</svg>"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
