Colaboratory を使用して作成しました

--- a/svg01.ipynb
+++ b/svg01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "svg01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMm+4le/oCjp4eTaEolyFFZ",
+      "authorship_tag": "ABX9TyMHsqzJyqUM9iGBpy7GsN55",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,25 +49,31 @@
           "base_uri": "https://localhost:8080/",
           "height": 179
         },
-        "outputId": "80829ce3-d619-4059-c031-f973ab1542f3"
+        "outputId": "3c276fa1-5acc-4d20-97da-ab5c9d84ab27"
       },
       "source": [
-        "%%svg\n",
+        "%%html\n",
         "\n",
         "<svg width=\"160\" height=\"160\">\n",
         "<rect x=\"0\" y=\"0\" width=\"160\" height=\"160\" fill=\"skyblue\"/>\n",
         "<rect x=\"40\" y=\"40\" width=\"80\" height=\"80\" fill=\"tomato\"/>\n",
         "</svg>"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.SVG object>"
+            "text/html": [
+              "\n",
+              "<svg width=\"160\" height=\"160\">\n",
+              "<rect x=\"0\" y=\"0\" width=\"160\" height=\"160\" fill=\"skyblue\"/>\n",
+              "<rect x=\"40\" y=\"40\" width=\"80\" height=\"80\" fill=\"tomato\"/>\n",
+              "</svg>"
             ],
-            "image/svg+xml": "<svg height=\"160\" width=\"160\">\n<rect fill=\"skyblue\" height=\"160\" width=\"160\" x=\"0\" y=\"0\"/>\n<rect fill=\"tomato\" height=\"80\" width=\"80\" x=\"40\" y=\"40\"/>\n</svg>"
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
           },
           "metadata": {
             "tags": []
