--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb のコピー",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPGb6ouxBtHcIoHiTNk27VQ",
+      "authorship_tag": "ABX9TyOYlbg1KwQddwSJ4MtEzTqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,9 @@
         "colab_type": "text"
       },
       "source": [
-        "# 数値の操作"
+        "# 数値の操作\n",
+        "\n",
+        "四則演算はべき乗以外は普通なので実験するだけでいいだろう。"
       ]
     },
     {
@@ -114,7 +116,7 @@
       "source": [
         "以上、加算、減算、乗算、除算を見た。\n",
         "\n",
-        "除算で引数が整数同士でも返される値は浮動小数点つきになる。\n",
+        "除算で引数が整数同士でも返される値は浮動小数点数になる。\n",
         "\n",
         "整数除算を行いたい場合は、`//` を用いる。"
       ]
@@ -279,7 +281,9 @@
         "* 乗算 multiplication\n",
         "* 除算 division\n",
         "* 加算 addition\n",
-        "* 減算 subtraction\n"
+        "* 減算 subtraction\n",
+        "\n",
+        "`PEMDAS`を覚える語呂合わせが欲しいが、どうでもいいか。\n"
       ]
     },
     {
@@ -318,7 +322,9 @@
       "source": [
         "# 変数\n",
         "\n",
-        "数字につけるラベルのことを数学やプログラミングでは変数、と呼ぶ。"
+        "数字につけるラベルのことを数学やプログラミングでは変数、と呼ぶ。\n",
+        "\n",
+        "中学とかだと`a`が定数、`x`が変数みたいな習い方するけど、それって無理あるよね。ラベルかぁ、ラベルというより箱がいいと思うのだが。\"なにか\"って言い方もあったかと思う。ある意味抽象化なのだから、そそ、\"方程式\"という言葉と一緒に習ったような気もする。なにかイコールなにか。なにか掛けるなにかイコールなにか。そのなにかに名前、ラベルをつけたところから数学が始まった。とかね。"
       ]
     },
     {
@@ -359,7 +365,7 @@
       "source": [
         "# 型 type\n",
         "\n",
-        "整数と浮動小数点は型がちがう。型を知るには `type()` を使う。"
+        "整数と浮動小数点数は型がちがう。型を知るには `type()` を使う。"
       ]
     },
     {
@@ -464,11 +470,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "RIQCKHigJwfH",
+        "colab_type": "text"
+      },
+      "source": [
+        "上の例でマイナスを`//`で整数割り算をして割り切れないと下側になるので、床除算なのだが、そういうこと。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GlhnAJU1oBbc",
         "colab_type": "text"
       },
       "source": [
         "# 分数 fraction\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-ymmVFHNKKKk",
+        "colab_type": "text"
+      },
+      "source": [
+        "以下の例では`from fractions import Fraction`としているが、一方で`Rational`というのもあったよね。\n",
+        "\n",
+        "質問: 分数と有理数との関係。実数との関係。無理数も、無限に小数点が続く分数もコンピューターだと`float`なのだろうがそれでは数学ができないので、どうにかしているはず。最低限表示の話だが、`numpy`では`Rational`、`python`では`Fraction`か？\n",
+        "\n",
+        "とりあえずここは`Fraction`で進もう。あとで直すかもしれない。"
       ]
     },
     {
@@ -625,6 +655,73 @@
             "tags": []
           },
           "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mezic1TkLtrN",
+        "colab_type": "text"
+      },
+      "source": [
+        "次の例でもあるように、`float`と分数をまぜると、`float`になってしまう。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lHA1rB9gLflQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "3922a0bc-a991-41b7-ae97-5f45ae212bde"
+      },
+      "source": [
+        "from fractions import Fraction\n",
+        "display(1.5 + Fraction (1, 3))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "1.8333333333333333"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iNs3unU4MLAH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "c3d7b69c-6a30-46c1-a268-02a8a96c19b5"
+      },
+      "source": [
+        "print (type (Fraction(1,3)))\n",
+        "print (type (1.5 + Fraction (1,3)))"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'fractions.Fraction'>\n",
+            "<class 'float'>\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -802,6 +899,36 @@
             "3.0\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x2z-1QFNYQjO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "c4766741-d480-4673-9d76-efedb5eb8ed1"
+      },
+      "source": [
+        "2 +3j - 3j"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2+0j)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     },
@@ -2346,7 +2473,7 @@
         "print (simplelist[1])\n",
         "print (simplelist[2])"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2377,7 +2504,7 @@
         "print (stringlist[1])\n",
         "print (emptylist)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2407,7 +2534,7 @@
         "emptylist = emptylist + [3, 4]\n",
         "print (emptylist)"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
