--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnjs.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNbxG0IjiZ5v4OZmawykyZ/",
+      "authorship_tag": "ABX9TyN5SGEQyjuc4txtvk/5KUT4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,272 @@
       "metadata": {
         "id": "zfrqNf9wbQuh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 708
+        },
+        "outputId": "013244b4-e240-4fcd-d8e8-059f4e6588ed"
       },
       "source": [
-        ""
+        "!apt install nodejs\n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following package was automatically installed and is no longer required:\n",
+            "  libnvidia-common-440\n",
+            "Use 'apt autoremove' to remove it.\n",
+            "The following additional packages will be installed:\n",
+            "  libc-ares2 libhttp-parser2.7.1 nodejs-doc\n",
+            "The following NEW packages will be installed:\n",
+            "  libc-ares2 libhttp-parser2.7.1 nodejs nodejs-doc\n",
+            "0 upgraded, 4 newly installed, 0 to remove and 35 not upgraded.\n",
+            "Need to get 5,606 kB of archives.\n",
+            "After this operation, 24.7 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 nodejs-doc all 8.10.0~dfsg-2ubuntu0.4 [752 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu bionic/main amd64 libc-ares2 amd64 1.14.0-1 [37.1 kB]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu bionic/main amd64 libhttp-parser2.7.1 amd64 2.7.1-2 [20.6 kB]\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu bionic-updates/universe amd64 nodejs amd64 8.10.0~dfsg-2ubuntu0.4 [4,796 kB]\n",
+            "Fetched 5,606 kB in 6s (1,015 kB/s)\n",
+            "Selecting previously unselected package nodejs-doc.\n",
+            "(Reading database ... 144487 files and directories currently installed.)\n",
+            "Preparing to unpack .../nodejs-doc_8.10.0~dfsg-2ubuntu0.4_all.deb ...\n",
+            "Unpacking nodejs-doc (8.10.0~dfsg-2ubuntu0.4) ...\n",
+            "Selecting previously unselected package libc-ares2:amd64.\n",
+            "Preparing to unpack .../libc-ares2_1.14.0-1_amd64.deb ...\n",
+            "Unpacking libc-ares2:amd64 (1.14.0-1) ...\n",
+            "Selecting previously unselected package libhttp-parser2.7.1:amd64.\n",
+            "Preparing to unpack .../libhttp-parser2.7.1_2.7.1-2_amd64.deb ...\n",
+            "Unpacking libhttp-parser2.7.1:amd64 (2.7.1-2) ...\n",
+            "Selecting previously unselected package nodejs.\n",
+            "Preparing to unpack .../nodejs_8.10.0~dfsg-2ubuntu0.4_amd64.deb ...\n",
+            "Unpacking nodejs (8.10.0~dfsg-2ubuntu0.4) ...\n",
+            "Setting up nodejs-doc (8.10.0~dfsg-2ubuntu0.4) ...\n",
+            "Setting up libhttp-parser2.7.1:amd64 (2.7.1-2) ...\n",
+            "Setting up libc-ares2:amd64 (1.14.0-1) ...\n",
+            "Setting up nodejs (8.10.0~dfsg-2ubuntu0.4) ...\n",
+            "update-alternatives: using /usr/bin/nodejs to provide /usr/bin/js (js) in auto mode\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Processing triggers for libc-bin (2.27-3ubuntu1) ...\n",
+            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RhiDRkT-08R4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "f208899f-cbf2-4807-fce5-bd4d017788df"
+      },
+      "source": [
+        "!apt install ruby\n"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "The following package was automatically installed and is no longer required:\n",
+            "  libnvidia-common-440\n",
+            "Use 'apt autoremove' to remove it.\n",
+            "The following additional packages will be installed:\n",
+            "  fonts-lato javascript-common libjs-jquery libruby2.5 rake ruby-did-you-mean\n",
+            "  ruby-minitest ruby-net-telnet ruby-power-assert ruby-test-unit ruby2.5\n",
+            "  rubygems-integration\n",
+            "Suggested packages:\n",
+            "  apache2 | lighttpd | httpd ri ruby-dev bundler\n",
+            "The following NEW packages will be installed:\n",
+            "  fonts-lato javascript-common libjs-jquery libruby2.5 rake ruby\n",
+            "  ruby-did-you-mean ruby-minitest ruby-net-telnet ruby-power-assert\n",
+            "  ruby-test-unit ruby2.5 rubygems-integration\n",
+            "0 upgraded, 13 newly installed, 0 to remove and 35 not upgraded.\n",
+            "Need to get 6,159 kB of archives.\n",
+            "After this operation, 27.8 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu bionic/main amd64 fonts-lato all 2.0-2 [2,698 kB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu bionic/main amd64 javascript-common all 11 [6,066 B]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu bionic/main amd64 libjs-jquery all 3.2.1-1 [152 kB]\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu bionic/main amd64 rubygems-integration all 1.11 [4,994 B]\n",
+            "Get:5 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 ruby2.5 amd64 2.5.1-1ubuntu1.6 [48.6 kB]\n",
+            "Get:6 http://archive.ubuntu.com/ubuntu bionic/main amd64 ruby amd64 1:2.5.1 [5,712 B]\n",
+            "Get:7 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 rake all 12.3.1-1ubuntu0.1 [44.9 kB]\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu bionic/main amd64 ruby-did-you-mean all 1.2.0-2 [9,700 B]\n",
+            "Get:9 http://archive.ubuntu.com/ubuntu bionic/main amd64 ruby-minitest all 5.10.3-1 [38.6 kB]\n",
+            "Get:10 http://archive.ubuntu.com/ubuntu bionic/main amd64 ruby-net-telnet all 0.1.1-2 [12.6 kB]\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu bionic/main amd64 ruby-power-assert all 0.3.0-1 [7,952 B]\n",
+            "Get:12 http://archive.ubuntu.com/ubuntu bionic/main amd64 ruby-test-unit all 3.2.5-1 [61.1 kB]\n",
+            "Get:13 http://archive.ubuntu.com/ubuntu bionic-updates/main amd64 libruby2.5 amd64 2.5.1-1ubuntu1.6 [3,069 kB]\n",
+            "Fetched 6,159 kB in 4s (1,597 kB/s)\n",
+            "Selecting previously unselected package fonts-lato.\n",
+            "(Reading database ... 144623 files and directories currently installed.)\n",
+            "Preparing to unpack .../00-fonts-lato_2.0-2_all.deb ...\n",
+            "Unpacking fonts-lato (2.0-2) ...\n",
+            "Selecting previously unselected package javascript-common.\n",
+            "Preparing to unpack .../01-javascript-common_11_all.deb ...\n",
+            "Unpacking javascript-common (11) ...\n",
+            "Selecting previously unselected package libjs-jquery.\n",
+            "Preparing to unpack .../02-libjs-jquery_3.2.1-1_all.deb ...\n",
+            "Unpacking libjs-jquery (3.2.1-1) ...\n",
+            "Selecting previously unselected package rubygems-integration.\n",
+            "Preparing to unpack .../03-rubygems-integration_1.11_all.deb ...\n",
+            "Unpacking rubygems-integration (1.11) ...\n",
+            "Selecting previously unselected package ruby2.5.\n",
+            "Preparing to unpack .../04-ruby2.5_2.5.1-1ubuntu1.6_amd64.deb ...\n",
+            "Unpacking ruby2.5 (2.5.1-1ubuntu1.6) ...\n",
+            "Selecting previously unselected package ruby.\n",
+            "Preparing to unpack .../05-ruby_1%3a2.5.1_amd64.deb ...\n",
+            "Unpacking ruby (1:2.5.1) ...\n",
+            "Selecting previously unselected package rake.\n",
+            "Preparing to unpack .../06-rake_12.3.1-1ubuntu0.1_all.deb ...\n",
+            "Unpacking rake (12.3.1-1ubuntu0.1) ...\n",
+            "Selecting previously unselected package ruby-did-you-mean.\n",
+            "Preparing to unpack .../07-ruby-did-you-mean_1.2.0-2_all.deb ...\n",
+            "Unpacking ruby-did-you-mean (1.2.0-2) ...\n",
+            "Selecting previously unselected package ruby-minitest.\n",
+            "Preparing to unpack .../08-ruby-minitest_5.10.3-1_all.deb ...\n",
+            "Unpacking ruby-minitest (5.10.3-1) ...\n",
+            "Selecting previously unselected package ruby-net-telnet.\n",
+            "Preparing to unpack .../09-ruby-net-telnet_0.1.1-2_all.deb ...\n",
+            "Unpacking ruby-net-telnet (0.1.1-2) ...\n",
+            "Selecting previously unselected package ruby-power-assert.\n",
+            "Preparing to unpack .../10-ruby-power-assert_0.3.0-1_all.deb ...\n",
+            "Unpacking ruby-power-assert (0.3.0-1) ...\n",
+            "Selecting previously unselected package ruby-test-unit.\n",
+            "Preparing to unpack .../11-ruby-test-unit_3.2.5-1_all.deb ...\n",
+            "Unpacking ruby-test-unit (3.2.5-1) ...\n",
+            "Selecting previously unselected package libruby2.5:amd64.\n",
+            "Preparing to unpack .../12-libruby2.5_2.5.1-1ubuntu1.6_amd64.deb ...\n",
+            "Unpacking libruby2.5:amd64 (2.5.1-1ubuntu1.6) ...\n",
+            "Setting up libjs-jquery (3.2.1-1) ...\n",
+            "Setting up fonts-lato (2.0-2) ...\n",
+            "Setting up ruby-did-you-mean (1.2.0-2) ...\n",
+            "Setting up ruby-net-telnet (0.1.1-2) ...\n",
+            "Setting up rubygems-integration (1.11) ...\n",
+            "Setting up javascript-common (11) ...\n",
+            "Setting up ruby-minitest (5.10.3-1) ...\n",
+            "Setting up ruby-power-assert (0.3.0-1) ...\n",
+            "Setting up ruby2.5 (2.5.1-1ubuntu1.6) ...\n",
+            "Setting up ruby (1:2.5.1) ...\n",
+            "Setting up ruby-test-unit (3.2.5-1) ...\n",
+            "Setting up rake (12.3.1-1ubuntu0.1) ...\n",
+            "Setting up libruby2.5:amd64 (2.5.1-1ubuntu1.6) ...\n",
+            "Processing triggers for libc-bin (2.27-3ubuntu1) ...\n",
+            "/sbin/ldconfig.real: /usr/local/lib/python3.6/dist-packages/ideep4py/lib/libmkldnn.so.0 is not a symbolic link\n",
+            "\n",
+            "Processing triggers for man-db (2.8.3-2ubuntu0.1) ...\n",
+            "Processing triggers for fontconfig (2.12.6-0ubuntu2) ...\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oNYU9ZJi2SGd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "36e342fc-6192-47d7-d7c4-828eb5d09d84"
+      },
+      "source": [
+        "%%script ruby\n",
+        "\n",
+        "puts(\"this\")"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "this\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZlIVemuO2W-N",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "fb4cd575-04ac-463c-c899-49bb9d76ca71"
+      },
+      "source": [
+        "!apt install ijavascript\n"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Reading package lists... Done\n",
+            "Building dependency tree       \n",
+            "Reading state information... Done\n",
+            "E: Unable to locate package ijavascript\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GSA8j46K593x",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5bd47079-e55e-4013-ac9d-3d3973643e63"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "let message = \"Javascript in Google Colab? Awesome!\"\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(message));"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "let message = \"Javascript in Google Colab? Awesome!\"\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(message));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
