Colaboratory を使用して作成しました

--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "learnjs.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMPy6FYUpqQhlZPXtBoTFJ",
+      "authorship_tag": "ABX9TyPbdfVCeaLNUEEFCDH4+00l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,7 @@
         "let message = \"Javascript in Google Colab? Awesome!\"\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(message));\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -104,7 +104,7 @@
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行書いたら\\nどうなるか\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -155,7 +155,7 @@
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行書いたら\\nどうなるか\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"二行目\"));"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -196,10 +196,129 @@
       "source": [
         "# JavaScript はじめの一歩\n",
         "\n",
-        "MDNのチュートリアルの最初の例は\n",
+        "MDNのチュートリアルの例でこの環境では使えないのは飛ばして、メモをとりなが読んで行こう。\n",
         "\n",
         "https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/What_is_JavaScript\n",
-        "\n"
+        "\n",
+        "コメントは `//` と `/* */`。これはつかえるかな。やってみよう。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Se7x_0xu6cuR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "bae4e0b0-74d1-4c18-e9fa-829057bfe482"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "// これはコメント\n",
+        "\n",
+        "/* 何行にも\n",
+        "   わたるコメントは\n",
+        "   こんな */\n",
+        "\n",
+        "document.body.style = \"white-space: pre;\"\n",
+        "\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"はろー\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"はろー\\n\"));"
+      ],
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "// これはコメント\n",
+              "\n",
+              "/* 何行にも\n",
+              "   わたるコメントは\n",
+              "   こんな */\n",
+              "\n",
+              "document.body.style = \"white-space: pre;\"\n",
+              "\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"はろー\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"はろー\\n\"));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YtCE3SsQ7Ubo",
+        "colab_type": "text"
+      },
+      "source": [
+        "使えた。Python や Ruby の `#` ではなくて、C++ や Java の `//` なのだ。覚えよう。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bidrpOZ48BaV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 数あてゲーム\n",
+        "\n",
+        "次の例が数当てゲームだが、ユーザーとのやりとりはやりたくないので、ゲームとして完成させることはあきらめて、部分部分を見ていこう。関数とか。ランダムの使い方、とか。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2b0J8k5m9HWF",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "8697868e-7e04-4911-ac9e-7b1c9c76f381"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "document.body.style = \"white-space: pre;\"\n",
+        "\n",
+        "let randomNumber = Math.floor(Math.random() * 100) + 1;\n",
+        "\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(randomNumber));\n"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "document.body.style = \"white-space: pre;\"\n",
+              "\n",
+              "let randomNumber = Math.floor(Math.random() * 100) + 1;\n",
+              "\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(randomNumber));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     }
   ]
