Colaboratory を使用して作成しました

--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "learnjs.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbdfVCeaLNUEEFCDH4+00l",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOO9+x0bTF9wbya1JmVeROW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,7 +229,7 @@
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"はろー\\n\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"はろー\\n\"));"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -287,7 +288,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "8697868e-7e04-4911-ac9e-7b1c9c76f381"
+        "outputId": "dbbc561f-90b1-4e76-b48b-c488b4d11030"
       },
       "source": [
         "%%javascript\n",
@@ -298,7 +299,7 @@
         "\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(randomNumber));\n"
       ],
-      "execution_count": 29,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
@@ -319,6 +320,107 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "34qJlNCSP4na",
+        "colab_type": "text"
+      },
+      "source": [
+        "`Math.random()` は普通に使えた。\n",
+        "\n",
+        "`document.createTextNode()` で数字が自動で文字列に変換されているのだろうか。\n",
+        "\n",
+        "そもそも、JavaScript の型ってどうやって調べるのか。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9Uy5HzVoSCoG",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 四則演算\n",
+        "\n",
+        "加算減算乗算除算は普通。10/3 も普通に float になる。\n",
+        "\n",
+        "python の `//` に当たるのは `Math.floor()` かな。\n",
+        "\n",
+        "冪乗とは `**` でも `^` でもない。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g34dIsYgRVAb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 136
+        },
+        "outputId": "d15e72e9-e370-4e09-c548-65da2fd06daa"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "document.body.style = \"white-space: pre;\";\n",
+        "\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(10/3));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(10 % 3));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(Math.floor(-10 / 3)));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"晴れ\"*3));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"晴れ\" + \"雨\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"晴れ\" == \"晴れ\"));"
+      ],
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "document.body.style = \"white-space: pre;\";\n",
+              "\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(10/3));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(10 % 3));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(Math.floor(-10 / 3)));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"晴れ\"*3));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"晴れ\" + \"雨\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"晴れ\" == \"晴れ\"));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SOrTRvAUTppV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ\n",
+        "\n",
+        "https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/A_first_splash"
       ]
     }
   ]
