Colaboratory を使用して作成しました

--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOO9+x0bTF9wbya1JmVeROW",
+      "authorship_tag": "ABX9TyNvSFONT0VrRcRvX9r18iGc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -288,7 +288,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "dbbc561f-90b1-4e76-b48b-c488b4d11030"
+        "outputId": "926bb843-d918-4798-c4ff-89dae7518ee8"
       },
       "source": [
         "%%javascript\n",
@@ -299,7 +299,7 @@
         "\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(randomNumber));\n"
       ],
-      "execution_count": 31,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -333,7 +333,7 @@
         "\n",
         "`document.createTextNode()` で数字が自動で文字列に変換されているのだろうか。\n",
         "\n",
-        "そもそも、JavaScript の型ってどうやって調べるのか。"
+        "そもそも、JavaScript の型ってどうやって調べるのか。型にはうるさいのか。どういうしくみか。"
       ]
     },
     {
@@ -380,7 +380,7 @@
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
         "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"晴れ\" == \"晴れ\"));"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -421,6 +421,336 @@
         "# いまここ\n",
         "\n",
         "https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/A_first_splash"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6fRc3i3Hq2zo",
+        "colab_type": "text"
+      },
+      "source": [
+        "なにもわからないけど関数をつくってみよう。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "syXRslzRrIqT",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "96d47968-742b-4092-b463-f917d188301c"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "function checkGuess() {\n",
+        "    return \"This is checkGuess()\"\n",
+        "};\n",
+        "\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(checkGuess()));"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "function checkGuess() {\n",
+              "    return \"This is checkGuess()\"\n",
+              "};\n",
+              "\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(checkGuess()));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v1G5viwVra3B",
+        "colab_type": "text"
+      },
+      "source": [
+        "とりあえず `function funcname () {}` で関数が作れるらしい。`return` で返り値を指定できる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "TV6kQEpTr1dc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9a46409f-f760-4e93-8ff3-711332a3b8c6"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "function checkGuess (answer, guess, count) {\n",
+        "    count = count + 1;\n",
+        "    if (answer == guess) {\n",
+        "        return \"hit!!!!\";\n",
+        "    } else {\n",
+        "        return \"wrong!!!!\";\n",
+        "    }\n",
+        "};\n",
+        "\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(checkGuess(3, 2, 1)));"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "function checkGuess (answer, guess, count) {\n",
+              "    count = count + 1;\n",
+              "    if (answer == guess) {\n",
+              "        return \"hit!!!!\";\n",
+              "    } else {\n",
+              "        return \"wrong!!!!\";\n",
+              "    }\n",
+              "};\n",
+              "\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(checkGuess(3, 2, 1)));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eaV-V8CEs_Ye",
+        "colab_type": "text"
+      },
+      "source": [
+        "引数を指定できる。`if () {} else {}` もだいたい予想どおり。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xi5y8ZoHtVID",
+        "colab_type": "text"
+      },
+      "source": [
+        "文字列の結合に `+` が使える。文字列の繰り返しに `*` は使えない。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CIwS8zGNtqme",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "051d6b2c-3881-4429-d512-b3aaf06137dc"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "document.body.style = \"white-space: pre;\";\n",
+        "\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(3 == '3'));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(3 === '3'));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+        "document.querySelector(\"#output-area\").appendChild(document.createTextNode(3 === 3));"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "document.body.style = \"white-space: pre;\";\n",
+              "\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(3 == '3'));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(3 === '3'));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(\"\\n\"));\n",
+              "document.querySelector(\"#output-area\").appendChild(document.createTextNode(3 === 3));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NHZJIdEUuRQk",
+        "colab_type": "text"
+      },
+      "source": [
+        "同等かどうか調べるのに比較演算子が2種類ある、`==` と `===` 。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rR5jvtDhvV6e",
+        "colab_type": "text"
+      },
+      "source": [
+        "オブジェクトについて。実験。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8xkt7_6Evanq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "d5483390-75a1-4af6-fbaa-e4a90b25a60b"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "document.body.style = \"white-space: pre;\";\n",
+        "\n",
+        "outputField = document.querySelector(\"#output-area\");\n",
+        "\n",
+        "outputField.value = \"Hello!!!!\";\n",
+        "\n",
+        "outputField.appendChild(document.createTextNode(outputField.value));\n",
+        "outputField.appendChild(document.createTextNode(\"\\n\"));"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "document.body.style = \"white-space: pre;\";\n",
+              "\n",
+              "outputField = document.querySelector(\"#output-area\");\n",
+              "\n",
+              "outputField.value = \"Hello!!!!\";\n",
+              "\n",
+              "outputField.appendChild(document.createTextNode(outputField.value));\n",
+              "outputField.appendChild(document.createTextNode(\"\\n\"));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qXacWFruwxir",
+        "colab_type": "text"
+      },
+      "source": [
+        "`style` プロパティを変えるのはできるか? 実験。\n",
+        "\n",
+        "=> よくわからないが、できなかった。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xPcFEppxw-ea",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0f1e5597-7e39-4059-a994-0a84c109f204"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "// document.body.style = \"white-space: pre;\";\n",
+        "// document.body.style = \"backgroundColor: yellow\";\n",
+        "\n",
+        "outputField = document.querySelector(\"#output-area\");\n",
+        "outputField.style = \"backgroundColor: pink\";\n",
+        "\n",
+        "outputField.value = \"Hello!!!!\";\n",
+        "\n",
+        "outputField.appendChild(document.createTextNode(outputField.value));\n",
+        "outputField.appendChild(document.createTextNode(\"\\n\"));"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "// document.body.style = \"white-space: pre;\";\n",
+              "// document.body.style = \"backgroundColor: yellow\";\n",
+              "\n",
+              "outputField = document.querySelector(\"#output-area\");\n",
+              "outputField.style = \"backgroundColor: pink\";\n",
+              "\n",
+              "outputField.value = \"Hello!!!!\";\n",
+              "\n",
+              "outputField.appendChild(document.createTextNode(outputField.value));\n",
+              "outputField.appendChild(document.createTextNode(\"\\n\"));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1gO4HUMJySIR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# いまここ\n",
+        "\n",
+        "https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/Variables"
       ]
     }
   ]
