Colaboratory を使用して作成しました

--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNm29vYgUnyrKUvg1ENBaip",
+      "authorship_tag": "ABX9TyMHGflo+tKStUlM/k4pjnYh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -746,7 +746,7 @@
         "outputField.appendChild(document.createTextNode(scoobyDoo));\n",
         "outputField.appendChild(document.createTextNode(\"\\n\"));"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -815,7 +815,7 @@
         "outputField.appendChild(document.createTextNode(myAge));\n",
         "outputField.appendChild(document.createTextNode(\"\\n\"));"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -844,6 +844,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MHK1dlhuLETy",
+        "colab_type": "text"
+      },
+      "source": [
+        "定数の宣言には `const` を使う。`const` で宣言された定数は変更できない。"
       ]
     },
     {
@@ -887,7 +897,7 @@
         "outputField.appendChild(document.createTextNode(myAge));\n",
         "outputField.appendChild(document.createTextNode(\"\\n\"));"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -943,7 +953,102 @@
         "\n",
         "https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/Variables\n",
         "\n",
-        "# いまここ"
+        "# いまここ\n",
+        "\n",
+        "let dog = { name : 'ポチ', breed : 'ダルメシアン' };\n",
+        "\n",
+        "って、これ Python で言う辞書、連想配列 association array, hash, Elm なら record のことだよね。オブジェクトとはこれまた。\n",
+        "\n",
+        "`typeof()` というので型を調べられるらしいのでホントにオブジェクトというのか確認する。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KDf1K4zbO-jc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 86
+        },
+        "outputId": "c5f9254b-cab8-40e7-fbfb-170f489775b9"
+      },
+      "source": [
+        "%%javascript\n",
+        "\n",
+        "let myNameArray = ['Chris', 'Bob', 'Jim', 37];\n",
+        "\n",
+        "let myAge = myNameArray[3];\n",
+        "\n",
+        "let dog = { name : 'ポチ', breed : 'ダルメシアン' };\n",
+        "\n",
+        "document.body.style = \"white-space: pre;\";\n",
+        "\n",
+        "outputField = document.querySelector(\"#output-area\");\n",
+        "\n",
+        "outputField.appendChild(document.createTextNode(typeof myAge));\n",
+        "outputField.appendChild(document.createTextNode(\"\\n\"));\n",
+        "outputField.appendChild(document.createTextNode(typeof myNameArray));\n",
+        "outputField.appendChild(document.createTextNode(\"\\n\"));\n",
+        "outputField.appendChild(document.createTextNode(typeof dog));\n",
+        "outputField.appendChild(document.createTextNode(\"\\n\"));"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "let myNameArray = ['Chris', 'Bob', 'Jim', 37];\n",
+              "\n",
+              "let myAge = myNameArray[3];\n",
+              "\n",
+              "let dog = { name : 'ポチ', breed : 'ダルメシアン' };\n",
+              "\n",
+              "document.body.style = \"white-space: pre;\";\n",
+              "\n",
+              "outputField = document.querySelector(\"#output-area\");\n",
+              "\n",
+              "outputField.appendChild(document.createTextNode(typeof myAge));\n",
+              "outputField.appendChild(document.createTextNode(\"\\n\"));\n",
+              "outputField.appendChild(document.createTextNode(typeof myNameArray));\n",
+              "outputField.appendChild(document.createTextNode(\"\\n\"));\n",
+              "outputField.appendChild(document.createTextNode(typeof dog));\n",
+              "outputField.appendChild(document.createTextNode(\"\\n\"));"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UKANZ_CyP5YG",
+        "colab_type": "text"
+      },
+      "source": [
+        "数字は `number` でしかなくて、配列も連想配列も `object` だ!!!\n",
+        "\n",
+        "ということは整数と浮動小数点数の区別がなくて、リストと配列と連想配列も `typeof` で見る限りは区別がない。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Uq7GAzDgQY2Y",
+        "colab_type": "text"
+      },
+      "source": [
+        "# みんな数学が大好き\n",
+        "\n",
+        "https://developer.mozilla.org/ja/docs/Learn/JavaScript/First_steps/Math"
       ]
     }
   ]
