--- a/learnjs.ipynb
+++ b/learnjs.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjs.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNrMk6IPJB2I1Bgj4EiyOsg",
+      "authorship_tag": "ABX9TyPhuSRExPuqqjroSdoJNEbQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2516,61 +2516,127 @@
       "metadata": {
         "id": "aYw7J7P114TA",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        },
+        "outputId": "c9a89ee7-51ce-4fb2-dec3-e9eef9fd55b0"
       },
       "source": [
         "%%javascript\n",
         "\n",
-        "const list = document.querySelector(\"#output-area\");\n",
-        "list.innerHTML = '';\n",
-        "document.body.style = \"white-space: pre;\";\n",
+        "// const list = document.querySelector(\"#output-area\");\n",
+        "// list.innerHTML = '';\n",
+        "// document.body.style = \"white-space: pre;\";\n",
         "\n",
-        "function print (str) {\n",
-        "    let item = document.createElement('div');\n",
-        "    item.textContent = str;\n",
-        "    list.appendChild(item);\n",
-        "};\n",
+        "// function print (str) {\n",
+        "//     let item = document.createElement('div');\n",
+        "//     item.textContent = str;\n",
+        "//     list.appendChild(item);\n",
+        "// };\n",
         "\n",
         "\n",
-        "const list = document.querySelector('.output ul');\n",
-        "const searchInput = document.querySelector('.output input');\n",
-        "const searchBtn = document.querySelector('.output button');\n",
+        "// const list = document.querySelector('.output ul');\n",
+        "// const searchInput = document.querySelector('.output input');\n",
+        "// const searchBtn = document.querySelector('.output button');\n",
         "\n",
-        "list.innerHTML = '';\n",
+        "// // list.innerHTML = '';\n",
         "\n",
-        "let myHistory = [];\n",
+        "// let myHistory = [];\n",
         "\n",
-        "searchBtn.onclick = function() {\n",
-        "  // 検索ボックスが空ではない場合のみ検索語を受け付けるようにします\n",
-        "  if (searchInput.value !== '') {\n",
-        "    // No.1\n",
+        "// searchBtn.onclick = function() {\n",
+        "//   // 検索ボックスが空ではない場合のみ検索語を受け付けるようにします\n",
+        "//   if (searchInput.value !== '') {\n",
+        "//     // No.1\n",
+        "//     myHistory.unshift(searchInput.value);\n",
+        "//     // 表示中の一覧を空にして、同じ項目が表示されないようにして、\n",
+        "//     // 結果は検索語が入力される度に毎回作り直されます。\n",
+        "//     list.innerHTML = '';\n",
         "\n",
-        "    // 表示中の一覧を空にして、同じ項目が表示されないようにして、\n",
-        "    // 結果は検索語が入力される度に毎回作り直されます。\n",
-        "    list.innerHTML = '';\n",
+        "//     // 配列をループして、リスト内の全ての検索語を表示します\n",
+        "//     for (let i = 0; i < myHistory.length; i++) {\n",
+        "//       itemText = myHistory[i];\n",
+        "//       const listItem = document.createElement('li');\n",
+        "//       listItem.textContent = itemText;\n",
+        "//       list.appendChild(listItem);\n",
+        "//     }\n",
         "\n",
-        "    // 配列をループして、リスト内の全ての検索語を表示します\n",
-        "    for (let i = 0; i < myHistory.length; i++) {\n",
-        "      itemText = myHistory[i];\n",
-        "      const listItem = document.createElement('li');\n",
-        "      listItem.textContent = itemText;\n",
-        "      list.appendChild(listItem);\n",
-        "    }\n",
+        "//     // 配列の長さが 5以上になったら一番古い検索語を削除します\n",
+        "//     if (myHistory.length >= 5) {\n",
+        "//       // No.2\n",
+        "//       myHistory.pop();\n",
+        "//     }\n",
         "\n",
-        "    // 配列の長さが 5以上になったら一番古い検索語を削除します\n",
-        "    if (myHistory.length >= 5) {\n",
-        "      // No.2\n",
-        "\n",
-        "    }\n",
-        "\n",
-        "    // 次の検索語を受け付けるため、検索ボックスを空にしてフォーカスします\n",
-        "    searchInput.value = '';\n",
-        "    searchInput.focus();\n",
-        "  }\n",
-        "}\n"
+        "//     // 次の検索語を受け付けるため、検索ボックスを空にしてフォーカスします\n",
+        "//     searchInput.value = '';\n",
+        "//     searchInput.focus();\n",
+        "//   }\n",
+        "// }\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/javascript": [
+              "\n",
+              "// const list = document.querySelector(\"#output-area\");\n",
+              "// list.innerHTML = '';\n",
+              "// document.body.style = \"white-space: pre;\";\n",
+              "\n",
+              "// function print (str) {\n",
+              "//     let item = document.createElement('div');\n",
+              "//     item.textContent = str;\n",
+              "//     list.appendChild(item);\n",
+              "// };\n",
+              "\n",
+              "\n",
+              "const list = document.querySelector('.output ul');\n",
+              "const searchInput = document.querySelector('.output input');\n",
+              "const searchBtn = document.querySelector('.output button');\n",
+              "\n",
+              "// list.innerHTML = '';\n",
+              "\n",
+              "let myHistory = [];\n",
+              "\n",
+              "searchBtn.onclick = function() {\n",
+              "  // 検索ボックスが空ではない場合のみ検索語を受け付けるようにします\n",
+              "  if (searchInput.value !== '') {\n",
+              "    // No.1\n",
+              "    myHistory.unshift(searchInput.value);\n",
+              "    // 表示中の一覧を空にして、同じ項目が表示されないようにして、\n",
+              "    // 結果は検索語が入力される度に毎回作り直されます。\n",
+              "    list.innerHTML = '';\n",
+              "\n",
+              "    // 配列をループして、リスト内の全ての検索語を表示します\n",
+              "    for (let i = 0; i < myHistory.length; i++) {\n",
+              "      itemText = myHistory[i];\n",
+              "      const listItem = document.createElement('li');\n",
+              "      listItem.textContent = itemText;\n",
+              "      list.appendChild(listItem);\n",
+              "    }\n",
+              "\n",
+              "    // 配列の長さが 5以上になったら一番古い検索語を削除します\n",
+              "    if (myHistory.length >= 5) {\n",
+              "      // No.2\n",
+              "      myHistory.pop();\n",
+              "    }\n",
+              "\n",
+              "    // 次の検索語を受け付けるため、検索ボックスを空にしてフォーカスします\n",
+              "    searchInput.value = '';\n",
+              "    searchInput.focus();\n",
+              "  }\n",
+              "}"
+            ],
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "markdown",
